[tool.poetry]
name = "pytorch practice"
version = "0.1.0"
description = ""
authors = ["Nishanthan Kamaleson <n.kamaleson@harbourrockcapital.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
lab = "^8.1"
jupyterlab = "^4.1.5"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
